experiement_output/error_log/nondex-JetBrains-teamcity-gradle:gradle-runner-server.log
warning: [options] source value 6 is obsolete and will be removed in a future release
warning: [options] target value 1.6 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task199/wd/NonDex-plugin-test/github.com/JetBrains/teamcity-gradle/gradle-runner-server/src/main/java/jetbrains/buildServer/gradle/server/GradleRunnerDiscoveryExtension.java:43: error: diamond operator is not supported in -source 6
    final List<FileElement> foundBuildFiles = new ArrayList<>(0);
                                                            ^
  (use -source 7 or higher to enable diamond operator)
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task199/wd/NonDex-plugin-test/github.com/JetBrains/teamcity-gradle/gradle-runner-server/src/main/java/jetbrains/buildServer/gradle/server/GradleRunnerDiscoveryExtension.java:45: error: lambda expressions are not supported in -source 6
    traverse(dir, (d, child) -> {
                             ^
  (use -source 8 or higher to enable lambda expressions)
2 errors
3 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':gradle-runner-server:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 25s
